# dr_quine

./: CMakeLists.txt  README.md
Colleen/: Colleen.c
Grace/: Grace.c
Sully/: Sully.c
